--- a/WebServer/templates/introduce.html
+++ b/WebServer/templates/introduce.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +13,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    
+
 </head>
+
 <body>
-   <div class="app">
+    <div class="app">
         <div class="grid">
             <header class="header">
                 <div class="header_intro">
                     <ul class="header_intro-list">
                         <li class="header_intro-item" style="font-weight: bold;">Sáng tạo không giới hạn</li>
                     </ul>
-    
+
                     <ul class="header_intro-list">
                         <li class="header_intro-item header_intro-item-separate tooltip">
                             <i class="header_intro-icon fa-regular fa-clock"></i>
@@ -36,10 +38,11 @@
                         </li>
                     </ul>
                 </div>
-    
+
                 <nav class="header_navbar">
                     <a href="#" class="header_navbar-logo">
-                        <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt="" title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
+                        <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt=""
+                            title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
                     </a>
 
                     <ul class="header_navbar-list">
@@ -48,15 +51,15 @@
                             <li class="header_navbar-item"><a href="/introduce">Giới thiệu</a></li>
                             <li class="header_navbar-item"><a href="/products">Sản phẩm</a></li>
                             <li class="header_navbar-item"><a href="/contact">Liên hệ</a></li>
-                            
+
                         </ul>
                     </ul>
-            
+
                     <div class="header_navbar-btn">
                         <div class="header_navbar-btn-item search-btn">
                             <button>
                                 <i class="fa-solid fa-magnifying-glass">
-                                <img src="../static/assets/img/search.png" alt="">
+                                    <img src="../static/assets/img/search.png" alt="">
 
                                 </i></button>
                             <i class="fa-solid fa-search"></i>
@@ -74,39 +77,46 @@
                                 Giỏ hàng
                                 <i style="color: white;" class="fa-solid fa-cart-shopping"></i>
                             </a>
-                            <div class="header_navbar-cart-list header_navbar-no-cart">
-                                <img src="../static/assets/img/empty-cart.png" alt="" class="header_navbar-no-cart-img">
-                            </div>
                         </div>
                     </div>
-                    
+
                 </nav>
             </header>
         </div>
-        
+
         <div class="grid">
             <div class="intro_container">
                 <div class="intro_content">
                     <h2 class="intro_content-header">Về Teddy Paradise</h2>
                     <div class="content_introduce">
                         <div class="content_logo">
-                            <img src="../static/assets/img/Gemini_Generated_Image_opu087opu087opu0-fotor-20241009172321.jpg" alt="" class="content_logo-image">
+                            <img src="../static/assets/img/Gemini_Generated_Image_opu087opu087opu0-fotor-20241009172321.jpg"
+                                alt="" class="content_logo-image">
                         </div>
-            
+
                         <div class="content_intro-text">
                             <p class="content_intro-text-paragraph">
-                                Teddy Paradise, một thương hiệu chuyên về gấu bông, ra đời vào ngày 12/10/2024 với sứ mệnh mang đến cho người tiêu dùng Việt Nam những chú gấu bông đáng yêu, chất lượng cao với giá cả cạnh tranh. Chúng tôi không chỉ cung cấp sản phẩm, mà còn gửi gắm vào đó những giá trị cảm xúc, sự hài lòng và niềm vui cho khách hàng.
+                                Teddy Paradise, một thương hiệu chuyên về gấu bông, ra đời vào ngày 12/10/2024 với sứ
+                                mệnh mang đến cho người tiêu dùng Việt Nam những chú gấu bông đáng yêu, chất lượng cao
+                                với giá cả cạnh tranh. Chúng tôi không chỉ cung cấp sản phẩm, mà còn gửi gắm vào đó
+                                những giá trị cảm xúc, sự hài lòng và niềm vui cho khách hàng.
                             </p>
                             <p class="content_intro-text-paragraph">
-                                Với phương châm ‘Yêu thương - Chất lượng’, Teddy Paradise luôn nỗ lực không ngừng trong việc phát triển và nâng cao chất lượng sản phẩm cũng như dịch vụ, nhằm mang đến cho khách hàng những trải nghiệm đáng nhớ và ấn tượng với mỗi chú gấu bông.
+                                Với phương châm ‘Yêu thương - Chất lượng’, Teddy Paradise luôn nỗ lực không ngừng trong
+                                việc phát triển và nâng cao chất lượng sản phẩm cũng như dịch vụ, nhằm mang đến cho
+                                khách hàng những trải nghiệm đáng nhớ và ấn tượng với mỗi chú gấu bông.
                             </p>
                             <p class="content_intro-text-paragraph">
-                                Chú trọng đến việc đặt khách hàng làm trọng tâm, mỗi sản phẩm từ Teddy Paradise không chỉ là món quà đơn thuần, mà còn là biểu tượng của sự ấm áp, đem lại giá trị cảm xúc và sự thỏa mãn tuyệt đối cho người nhận. Cam kết 100% sản phẩm gấu bông của chúng tôi đều an toàn, mềm mại, và bền bỉ, Teddy Paradise tự hào là điểm đến tin cậy cho những ai yêu thích sự ngọt ngào và dễ thương của gấu bông.
+                                Chú trọng đến việc đặt khách hàng làm trọng tâm, mỗi sản phẩm từ Teddy Paradise không
+                                chỉ là món quà đơn thuần, mà còn là biểu tượng của sự ấm áp, đem lại giá trị cảm xúc và
+                                sự thỏa mãn tuyệt đối cho người nhận. Cam kết 100% sản phẩm gấu bông của chúng tôi đều
+                                an toàn, mềm mại, và bền bỉ, Teddy Paradise tự hào là điểm đến tin cậy cho những ai yêu
+                                thích sự ngọt ngào và dễ thương của gấu bông.
                             </p>
                         </div>
-                    </div>   
+                    </div>
                 </div>
-                
+
 
                 <div class="intro_content">
                     <h2 class="intro_content-header">Tầm nhìn - Giá trị cốt lõi</h2>
@@ -114,19 +124,30 @@
                         <div class="intro_content-container-half">
                             <h3 style="margin-top: 0;">Tầm nhìn</h3>
                             <p>
-                                Teddy Paradise hướng tới việc trở thành thương hiệu hàng đầu trong lĩnh vực quà tặng gấu bông, mang đến những chú gấu bông không chỉ mềm mại mà còn mang đậm dấu ấn của sự sáng tạo và tình cảm. Chúng tôi mong muốn lan tỏa giá trị của sự ấm áp và niềm vui qua từng sản phẩm, góp phần nâng cao đời sống tinh thần cho cộng đồng.
+                                Teddy Paradise hướng tới việc trở thành thương hiệu hàng đầu trong lĩnh vực quà tặng gấu
+                                bông, mang đến những chú gấu bông không chỉ mềm mại mà còn mang đậm dấu ấn của sự sáng
+                                tạo và tình cảm. Chúng tôi mong muốn lan tỏa giá trị của sự ấm áp và niềm vui qua từng
+                                sản phẩm, góp phần nâng cao đời sống tinh thần cho cộng đồng.
                             </p>
                             <p>
-                                Sứ mệnh của chúng tôi là mang đến cho khách hàng những chú gấu bông độc đáo, chất lượng cao và tràn đầy ý nghĩa. Chúng tôi cam kết sử dụng nguyên liệu an toàn, thân thiện với môi trường, và không ngừng sáng tạo để tạo ra những sản phẩm mang tính biểu tượng cho tình yêu thương và sự gắn kết.
+                                Sứ mệnh của chúng tôi là mang đến cho khách hàng những chú gấu bông độc đáo, chất lượng
+                                cao và tràn đầy ý nghĩa. Chúng tôi cam kết sử dụng nguyên liệu an toàn, thân thiện với
+                                môi trường, và không ngừng sáng tạo để tạo ra những sản phẩm mang tính biểu tượng cho
+                                tình yêu thương và sự gắn kết.
                             </p>
                             <h3 style="margin-top: 35px;">Giá trị</h3>
                             <p>
-                                Mỗi sản phẩm gấu bông tại Teddy Paradise đều được làm ra với sự chăm chút tỉ mỉ trong từng chi tiết, từ chất liệu đến hình dáng. Chúng tôi cam kết mang đến cho khách hàng những sản phẩm không chỉ bền đẹp mà còn thể hiện rõ nét sự tinh tế và chất lượng cao nhất. Teddy Paradise không chỉ tạo ra sản phẩm, mà còn mang đến những món quà tinh thần đáng quý, giúp khách hàng lưu giữ những khoảnh khắc yêu thương và ấm áp.
+                                Mỗi sản phẩm gấu bông tại Teddy Paradise đều được làm ra với sự chăm chút tỉ mỉ trong
+                                từng chi tiết, từ chất liệu đến hình dáng. Chúng tôi cam kết mang đến cho khách hàng
+                                những sản phẩm không chỉ bền đẹp mà còn thể hiện rõ nét sự tinh tế và chất lượng cao
+                                nhất. Teddy Paradise không chỉ tạo ra sản phẩm, mà còn mang đến những món quà tinh thần
+                                đáng quý, giúp khách hàng lưu giữ những khoảnh khắc yêu thương và ấm áp.
                             </p>
                         </div>
 
                         <div class="intro_content-container-half">
-                            <img src="../static/assets/img/DALL·E 2024-10-09 06.44.23 - A cute and playful banner for a stuffed toy (teddy bear) shop. The banner features soft pastel colors such as light pink, baby blue, and soft yellow. .webp" alt="" class="intro_content-container-img">
+                            <img src="../static/assets/img/DALL·E 2024-10-09 06.44.23 - A cute and playful banner for a stuffed toy (teddy bear) shop. The banner features soft pastel colors such as light pink, baby blue, and soft yellow. .webp"
+                                alt="" class="intro_content-container-img">
                             <img src="../static/assets/img/20.10_Banner.jpg" alt="" class="intro_content-container-img">
                         </div>
                     </div>
@@ -138,13 +159,15 @@
             <div class="footer">
                 <div class="footer_info">
                     <div class="footer_info-content">
-                        <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9-fotor-20241009183056-removebg-preview.png" alt="" class="footer_info-logo">
+                        <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9-fotor-20241009183056-removebg-preview.png"
+                            alt="" class="footer_info-logo">
                     </div>
 
                     <div class="footer_info-content">
                         <h3 class="footer_info-heading">THÔNG TIN LIÊN HỆ</h3>
                         <div class="footer_info-line"></div>
-                        <p class="footer_info-text">Số hotline được trực trong khung giờ từ 9h-17h mỗi T2 – T7 hàng tuần</p>
+                        <p class="footer_info-text">Số hotline được trực trong khung giờ từ 9h-17h mỗi T2 – T7 hàng tuần
+                        </p>
                         <p class="footer_info-text">Đường dây nóng: +84 904 091 648</p>
                         <p class="footer_info-text">P. Nguyễn Trác, Yên Nghĩa, Hà Đông, Hà Nội</p>
                     </div>
@@ -160,12 +183,13 @@
                     </div>
 
                     <div class="footer_info-content">
-                        <h3 class="footer_info-heading">KẾT NỐI VỚI CHÚNG TÔI</h3> 
-                        <div class="footer_info-line"></div>   
+                        <h3 class="footer_info-heading">KẾT NỐI VỚI CHÚNG TÔI</h3>
+                        <div class="footer_info-line"></div>
                         <a href="https://www.facebook.com/tedomi.norikarin.5/" class="footer_info-btn">
-                            <img src="https://lenxinhxiu.com/wp-content/uploads/2024/10/768px-Facebook-icon-1-400x400.png" alt="">
+                            <img src="https://lenxinhxiu.com/wp-content/uploads/2024/10/768px-Facebook-icon-1-400x400.png"
+                                alt="">
                         </a>
-                    </div>                    
+                    </div>
                 </div>
 
                 <div class="footer_payment">
@@ -189,10 +213,10 @@
                 </div>
             </div>
         </div>
-   </div>
+    </div>
 
-   <!-- Modal -->
-   <div class="modal js_modal">
+    <!-- Modal -->
+    <div class="modal js_modal">
         <div class="modal_overlay js_overlay"></div>
         <div class="modal_body">
             <!-- Login Form -->
@@ -201,7 +225,7 @@
                     <h3 class="auth_form-heading">ĐĂNG NHẬP</h3>
                     <span class="auth_form-switch js_switch">ĐĂNG KÝ</span>
                 </div>
-                
+
                 <div class="auth_form-form">
                     <div class="auth_form-group">
                         <input type="text" class="auth_form-input" placeholder="Địa chỉ Email">
@@ -228,13 +252,13 @@
                 </div>
             </div>
 
-             <!-- Register Form -->
-             <div class="auth_form js_register-form" style="display: none;">
+            <!-- Register Form -->
+            <div class="auth_form js_register-form" style="display: none;">
                 <div class="auth_form-header">
                     <h3 class="auth_form-heading">ĐĂNG KÝ</h3>
                     <span class="auth_form-switch js_switch">ĐĂNG NHẬP</span>
                 </div>
-                
+
                 <div class="auth_form-form">
                     <div class="auth_form-group">
                         <input type="text" class="auth_form-input" placeholder="Địa chỉ Email">
@@ -248,7 +272,9 @@
                 </div>
 
                 <div class="auth_form-aside">
-                    <p class="auth_form-policy">Dữ liệu cá nhân của bạn sẽ được sử dụng để hỗ trợ trải nghiệm của bạn trên toàn bộ trang web này, quản lý quyền truy cập vào tài khoản của bạn, và cho các mục đích khác được mô tả trong chính sách riêng tư của chúng tôi.</p>
+                    <p class="auth_form-policy">Dữ liệu cá nhân của bạn sẽ được sử dụng để hỗ trợ trải nghiệm của bạn
+                        trên toàn bộ trang web này, quản lý quyền truy cập vào tài khoản của bạn, và cho các mục đích
+                        khác được mô tả trong chính sách riêng tư của chúng tôi.</p>
                 </div>
 
                 <div class="auth_form-controls">
@@ -257,10 +283,11 @@
                 </div>
             </div>
         </div>
-   </div>
-   
+    </div>
+
     <script src="../static/assets/js/search.js"></script>
-    <script>src="../static/assets/js/auth.js"</script>
-    
+    <script>src = "../static/assets/js/auth.js"</script>
+    <script src="../static/assets/js/order.js"></script>
 </body>
+
 </html>
